--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "//example.org"
+baseURL = "//wonderful-austin-36bdcd.netlify.com"
 languageCode = "en-us"
 title = "Product Resources"
 theme = "hugo-phlat-theme"
