--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "//wonderful-austin-36bdcd.netlify.com/"
 languageCode = "en-us"
 title = "Product Resources"
-theme = "hugo-phlat-theme"
+theme = "phlat"
 
 [permalinks]
     post = "/:year/:month/:slug/"
@@ -12,5 +12,5 @@ theme = "hugo-phlat-theme"
     category = "categories"
 
 [params]
-    keywords = ["default", "keywords", "if", "no", "front", "matter"]
-    description = "A description that will appear as a default if front matter does not exist"
+    keywords = ["UX", "product", "agile", "design", "tech", "software"]
+    description = "A collection of articles and resources for product-facing people."
