--- a/config.toml
+++ b/config.toml
@@ -8,9 +8,46 @@ theme = "phlat"
     page = "/:slug/"
 
 [taxonomies]
-    tag = "tags"
-    category = "categories"
+    tag                 = "tags"
+    category            = "categories"
+
+# The header menu will appear as an inline-list at the top right of the page
+[[menu.header]]
+    name                = "Home"
+    weight              = 1
+    url                 = "/"
+
+[[menu.header]]
+    name                = "About"
+    weight              = 3
+    url                 = "/about/"
+
+# The footer menu will appear as an inline-list at the bottom left of the footer found at the bottom of the screen
+[[menu.footer]]
+    name                = "Privacy Policy"
+    weight              = 1
+    url                 = "/privacy-policy/"
 
 [params]
     keywords = ["UX", "product", "agile", "design", "tech", "software"]
     description = "A collection of articles and resources for product-facing people."
+    google_analytics    = "UA-XXXXX-YY"
+    google_adsense      = "ca-pub-XXXXXX"
+    disqus              = "shortname"
+    google_webmaster    = ""
+    bing_webmaster      = ""
+    alexa               = ""
+    favicon             = ""
+
+# Social media icons and links that appear in the footer
+[social]
+    twitter             = "https://www.twitter.com/NAME_HERE"
+    googleplus          = "https://plus.google.com/NAME_HERE"
+    linkedin            = "https://www.linkedin.com/in/NAME_HERE"
+    youtube             = "https://www.youtube.com/users/NAME_HERE"
+    paypal              = "https://paypal.me/NAME_HERE"
+    instagram           = ""
+    reddit              = ""
+    email               = ""
+    pinterest           = ""
+    wordpress           = ""
