--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "//wonderful-austin-36bdcd.netlify.com/"
 languageCode = "en-us"
 title = "Product Resources"
-theme = "phlat"
+theme = "pds"
 
 [permalinks]
     post = "/:year/:month/:slug/"
